Test 3 to fix IOS chrome alignment bug

--- a/survey/survey-style.scss
+++ b/survey/survey-style.scss
@@ -107,8 +107,7 @@ select {
     color: black;
     background-color: white;
     text-align: center;
-    align-items: center;
-
+    text-align-last: center;
 }
 
 option {
